# ai_coding_agent

./: README.md  main.py  openai_main.py  pyproject.toml  test.py
calculator/: main.py  newlorem.txt  tests.py
functions/: call_functions.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
